C++-annotations (10.4.0)    NOT YET TAGGED

  * Added a section about reference bindings to the Overloading chapter

  * Added cplusplus.css which can be used to fine-tune the layout of the
    Annotatiions' html conversion.

  * Standardized the installation procedure

  * Fixed typos


C++-annotations (10.3.0)

  * Added new sections about expression templates, about attributes,
    about shared mutexes,  about shared locks, about heterogeneous lookups,
    about sized deallocation functions, and about moving and swapping streams

  * Added new C++14 elements to relevant sections

  * Reorganized the section about lambda expression

  * Added the file ./compiler.im providing all #defines for compiling the
    support programs. See that file for specific information.

  * Fixed a compilation problem encountered with g++-5.

  * Fixed some typos.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 16 Aug 2015 15:21:10 +0200

C++-annotations (10.2.0)

  * Rewrote the sections covering the regular expression matching classes. 

  * The section about lambda expression also covers generic lambda
    expressions. 

  * The coverage of binders now concentrates on stl::bind.

  * Added a section about stl::placeholders to chapter 4 (Namespaces)

  * Removed superfluous 'return 0;' statements from main functions.

  * Conversion related stamp files (e.g., html-stamp) no longer
    used. Build-commands are now unconditionally executed.

  * Added a section to class templates covering a bare bones implementation of
    not_fn, which will likely be added in C++17.

  * Added some notes about C++17.

  * Several cosmetic improvements were made.

  * Html files now use html5.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 28 May 2015 12:06:01 +0200

C++-annotations (10.1.0)

  * Typos and added a section about regular expression, moving the topic from
    containers to stl.

  * Fixed various typos and inconsistencies
