@@ -9,6 +9,8 @@ To create the kindle version:
     * cd bin 
     * createhtml
     * cd ../html
+    * cp ../yo/cplusplus.css .
+
     * edit cplusplus.opf to reflect the latest version, maybe add a new
         chapter. 
 
@@ -18,7 +20,9 @@ To create the kindle version:
     
     * Follow the instructions at
         https://kdp.amazon.com/self-publishing/dashboard 
-      for uploading the latest version
+
+        Select `Book actions' for uploading the latest version:
+
         - Click on C++ Annotations
         - Edit the version
         - Click Browse to go to the location where the .mobi file is and
