@@ -2,7 +2,7 @@
 <package unique-identifier="uid">
     <metadata>
         <dc-metadata xmlns:dc="http://purl.org/metadata/dublin_core" xmlns:oebpackage="http://openebook.org/namespaces/oeb-package/1.0/">
-            <dc:Title>C++ Annotations Version 10.3.0</dc:Title>
+            <dc:Title>C++ Annotations Version 10.4.1-pre</dc:Title>
             <dc:Language>en-us</dc:Language>
             <dc:Identifier id="uid">EA989A949A</dc:Identifier>
         <dc:Creator>Frank B. Brokken</dc:Creator><dc:Publisher>The University of Groningen</dc:Publisher><dc:Identifier scheme="ISBN">9036704707</dc:Identifier><dc:Subject BASICCode="COM000000">Computing, Internet</dc:Subject><dc:Date>01/10/2013</dc:Date></dc-metadata>
