@@ -3,15 +3,15 @@
 <head>
 <title>The C++ Annotations</title>
 
-<style type ="text/css">
+<style>
     html, body, table, iframe {width:100%; }
-    iframe { height: 100%; border: none; }
+    iframe { height: 100%; border: none; display: block; }
     html, body, table, td { border: 0; margin: 0; padding: 0; height:100%; }
     table { border-spacing: 0; }
 </style>
 </head>
 
-<script language=javascript>
+<script>
     var
         contentsHiding = true,
         indexHiding = true,
@@ -78,7 +78,7 @@
 <tr>
     <td width = "190">
     <iframe src="target.shtml" name="index"></iframe>
-`   </td>
+    </td>
 
     <td width = "*%">
     <iframe src="cplusplus.html" name="info"></iframe>
