@@ -9,19 +9,20 @@ is not covered when equal to bf(C)'s grammar. Any basic book on bf(C) may be
 consulted to refresh that part of bf(C++)'s grammar.
 
 If you want a bf(hard-copy version of the C++ Annotations): printable versions
-are available in postscript, i(pdf) and other formats in
-    hi(http://sourceforge.net/projects/cppannotations/)
+are available in zip-archives containing files in postscript, i(pdf) and other
+formats at
+    hi(https://github.com/fbb-git/cppannotations-zip)
         center(
-    tlurl(http://sourceforge.net/projects/cppannotations/),
+    tlurl(https://github.com/fbb-git/cppannotations-zip)
         )
-    in files having names starting with tt(cplusplus) (A4 paper size). Files
-having names starting with `cplusplusus' are intended for the US em(legal)
-paper size. The annotations() are also available as a Kindle book.
+    Pages of files having names starting with tt(cplusplus) are in A4 paper
+size, pages of files having names starting with tt(cplusplusus) are in the US
+em(legal) paper size. The annotations() are also available as a Kindle book.
 
     The latest version of the bf(C++) Annotations in html-format can be
 browsed at:
         center(
-    tlurl(http://cppannotations.sourceforge.net/)nl()
+    tlurl(https://fbb-git.github.io/cppannotations/)nl()
     and/or at+nl()
     tlurl(http://www.icce.rug.nl/documents/)
 
@@ -30,6 +31,10 @@ COMMENT(
 href=http://openstudy.com/study-groups/C%2B%2B+Annotations+-+Frank+B.+Brokken>
         Join A Study Group</a>)
 END)
+
+INCLUDEFILE(mailus)
+
+
     )
 
 
