@@ -1,5 +1,3 @@
-INCLUDEFILE(mailus)
-
 includefile(advancedtemplates/intro)
 
 lsect(SUBTLE)(Subtleties)
