@@ -1,5 +1,3 @@
-INCLUDEFILE(mailus)
-
 includefile(classes/intro)
 
 sect(The constructor)
