@@ -1,5 +1,3 @@
-INCLUDEFILE(mailus)
-
 includefile(classtemplates/intro)
 
 lsect(TEMPCLASSDEF)(Defining class templates)
