@@ -1,5 +1,3 @@
-INCLUDEFILE(mailus)
-
 includefile(concrete/intro)
 
 lsect(FDSTREAMBUFFER)(Using file descriptors with `streambuf' classes)
