@@ -1,5 +1,3 @@
-INCLUDEFILE(mailus)
-
 includefile(containers/container)
 
 sect(Notations used in this chapter)
