@@ -1,5 +1,3 @@
-INCLUDEFILE(mailus)
-
 includefile(exceptions/intro)
 
 sect(Exception syntax)
