@@ -1,5 +1,3 @@
-INCLUDEFILE(mailus)
-
 includefile(first/first)
 
 sect(Notable differences with C)
