@@ -1,5 +1,3 @@
-INCLUDEFILE(mailus)
-
 includefile(friends/intro)
 
     lsect(FriendsFriendfun)(Friend functions)
