@@ -1,5 +1,3 @@
-INCLUDEFILE(mailus)
-
 COMMENT(The Template Concept)
 includefile(functiontemplates/intro)
 
