@@ -1,5 +1,3 @@
-INCLUDEFILE(mailus)
-
 sect(The Generic Algorithms)
 includefile(generic/intro)
 
