@@ -1,6 +1,3 @@
-
-INCLUDEFILE(mailus)
-
 includefile(inheritance/intro)
 
     lsect(VehicleSystem)(Related types)
