@@ -1,5 +1,3 @@
-INCLUDEFILE(mailus)
-
 includefile(intro/intro)
 
     lsect(WHATSNEW)(What's new in the C++ Annotations)
