@@ -1,5 +1,3 @@
-INCLUDEFILE(mailus)
-
 includefile(iostreams/intro)
 
 lsect(IOHDRS)(Special header files)
