@@ -1,6 +1,3 @@
-
-INCLUDEFILE(mailus)
-
 includefile(memory/intro)
 
 sect(Operators `new' and `delete')
