@@ -1,5 +1,3 @@
-INCLUDEFILE(mailus)
-
 includefile(nested/nesting)
 
 sect(Defining nested class members)
