@@ -1,5 +1,3 @@
-INCLUDEFILE(mailus)
-
 includefile(overloading/more)
 
 lsect(OPERATORINDEX)(Overloading `operator[]()')
