@@ -1,5 +1,3 @@
-INCLUDEFILE(mailus)
-
 includefile(pointermembers/intro)
 
     sect(Pointers to members: an example)
