@@ -1,5 +1,3 @@
-INCLUDEFILE(mailus)
-
 includefile(polymorphism/intro)
 
 lsect(virfunc)(Virtual functions)
