@@ -1,5 +1,3 @@
-INCLUDEFILE(mailus)
-
 includefile(stl/intro)
 
 lsect(PREDEFINED)(Predefined function objects)
