@@ -1,6 +1,3 @@
-
-INCLUDEFILE(mailus)
-
 includefile(string/string)
 
 sect(Operations on strings)
