@@ -1,2 +1,2 @@
-SUBST(DOCVERSION)(10.4.0)
+SUBST(DOCVERSION)(10.4.1-pre)
 SUBST(YEARS)(1994 - 2015)
