@@ -1,4 +1,13 @@
-C++-annotations (10.4.0)    NOT YET TAGGED
+C++-annotations (10.4.1-pre)
+
+  * Improved the html layout, following suggestions by Harmen Stoppels
+
+  * Removed repeated 'mailus' files from chapter openings. The 'mailus' info
+    is now shown as part of the abstract.
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 19 Dec 2015 22:19:18 +0100
+
+C++-annotations (10.4.0)
 
   * Added a section about reference bindings to the Overloading chapter
 
@@ -9,6 +18,7 @@ C++-annotations (10.4.0)    NOT YET TAGGED
 
   * Fixed typos
 
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 11 Dec 2015 17:12:31 +0100
 
 C++-annotations (10.3.0)
 
